<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.luisro00005513.tarea2perfilusuario.MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
    <!--=======Layouts========= -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/photo"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/Imagen_id"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Imagen_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/text_view_nombreCompleto"
            android:id="@+id/text_view_nombreCompleto"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_view_nombreCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/text_view_carrera"
            android:id="@+id/text_view_carrera"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_view_carrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/text_view_carnet"
            android:id="@+id/text_view_carnet"
            />

        <TextView
            android:id="@+id/text_view_redesSociales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_view_nombreCompleto"
            android:layout_alignStart="@+id/text_view_nombreCompleto"
            android:layout_below="@+id/text_view_carnet"
            android:layout_marginTop="11dp"
            android:text="@string/text_view_redesSociales"
            android:textSize="18dp" />
        <!--=======Layouts========= -->

        <!--=======facebook  ============-->
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_below="@id/text_view_redesSociales"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook"
            android:id="@+id/Imagen_idFacebook"
            />
        <TextView
            android:layout_marginTop="34dp"
            android:layout_below="@id/text_view_redesSociales"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/text_view_facebook"
            android:id="@+id/text_view_facebook"
            />
        <!--=======facebook (fin) ============-->

        <!--=======GitHub ============-->
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_below="@id/Imagen_idFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/github"
            android:id="@+id/Imagen_idGitHub"
            />
        <TextView
            android:layout_marginTop="34dp"
            android:layout_below="@id/text_view_facebook"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/text_view_github"
            android:id="@+id/text_view_github"
            />

        <!--=======GitHub (fin)============-->

        <!--=======Gmail ============-->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/Imagen_idFacebook"
            android:layout_toEndOf="@+id/text_view_redesSociales"
            android:layout_toRightOf="@+id/text_view_redesSociales"
            android:src="@drawable/gmail"
            android:id="@+id/Imagen_idGmail"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_view_github"
            android:layout_toEndOf="@+id/Imagen_id"
            android:layout_toRightOf="@+id/Imagen_id"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/text_view_gmail"
            android:id="@+id/text_view_gmail"
            />
        <!--=======Gmail (fin)============-->

        <!--=======telefono ============-->
        <ImageView
            android:id="@+id/Imagen_telefono"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/Imagen_idGmail"
            android:layout_alignStart="@+id/Imagen_idGmail"
            android:layout_alignTop="@+id/Imagen_idGitHub"
            android:src="@drawable/phone" />

            <TextView
                android:id="@+id/text_view_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/text_view_github"
                android:layout_alignBottom="@+id/text_view_github"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/Imagen_telefono"
                android:layout_toRightOf="@+id/Imagen_telefono"
                android:text="@string/text_view_telefono"
                android:textAlignment="center"
                android:textSize="15dp" />
        <!--=======telefono (fin)============-->
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
